--- a/pom.xml
+++ b/pom.xml
@@ -13,34 +13,111 @@
     <groupId>com.spring.boot.alice</groupId>
     <artifactId>spring-boot-alice</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.1</version>
+    <version>1.0-SNAPSHOT</version>
 
     <modules>
         <module>spring-boot-activiti</module>
+        <module>spring-boot-actuator</module>
+        <module>spring-boot-advice</module>
+        <module>spring-boot-akka</module>
+        <module>spring-boot-aliyun</module>
+        <module>spring-boot-annotation</module>
+        <module>spring-boot-aop</module>
         <module>spring-boot-arthas</module>
+        <module>spring-boot-async</module>
+        <module>spring-boot-auto-configuration</module>
+        <module>spring-boot-batch</module>
+        <module>spring-boot-caffeine</module>
         <module>spring-boot-camunda</module>
+        <module>spring-boot-clickhouse</module>
+        <module>spring-boot-configuration-processor</module>
+        <module>spring-boot-custom-starter</module>
+        <module>spring-boot-custom-starter-test</module>
+        <module>spring-boot-docker</module>
+        <module>spring-boot-doris</module>
         <module>spring-boot-elasticsearch</module>
         <module>spring-boot-example</module>
+        <module>spring-boot-flaw</module>
         <module>spring-boot-flowable</module>
+        <module>spring-boot-generator</module>
+        <module>spring-boot-graphql</module>
+        <module>spring-boot-graphql-java-kickstart</module>
+        <module>spring-boot-hazelcast</module>
+        <module>spring-boot-httpcomponents</module>
+        <module>spring-boot-huaweicloud</module>
+        <module>spring-boot-hystrix</module>
+        <module>spring-boot-influxdb</module>
+        <module>spring-boot-jar-war</module>
+        <module>spring-boot-jdbctemplate</module>
+        <module>spring-boot-jetty</module>
         <module>spring-boot-jib</module>
+        <module>spring-boot-jpa</module>
+        <module>spring-boot-json</module>
+        <module>spring-boot-jwt</module>
+        <module>spring-boot-kafka</module>
+        <module>spring-boot-kafka-consumer</module>
+        <module>spring-boot-kafka-producer</module>
+        <module>spring-boot-kafka-streams</module>
+        <module>spring-boot-knife4j</module>
+        <module>spring-boot-kubernetes</module>
+        <module>spring-boot-log</module>
         <module>spring-boot-logstash</module>
+        <module>spring-boot-mongo</module>
+        <module>spring-boot-multi-datasource-transaction</module>
         <module>spring-boot-mybatis-plus</module>
+        <module>spring-boot-mybatisplus</module>
+        <module>spring-boot-mybatisplus-druid-dynamic-datasource</module>
+        <module>spring-boot-mybatisplus-druid-multi-datasource</module>
+        <module>spring-boot-mybatisplus-sharding-jdbc</module>
+        <module>spring-boot-mycat</module>
+        <module>spring-boot-nebula</module>
+        <module>spring-boot-neo4j</module>
         <module>spring-boot-netty</module>
         <module>spring-boot-netty-client</module>
         <module>spring-boot-netty-common</module>
         <module>spring-boot-netty-server</module>
+        <module>spring-boot-okhttp</module>
+        <module>spring-boot-poi</module>
+        <module>spring-boot-postgres</module>
         <module>spring-boot-prometheus</module>
         <module>spring-boot-pulsar</module>
+        <module>spring-boot-qingcloud</module>
         <module>spring-boot-quartz</module>
+        <module>spring-boot-questdb</module>
         <module>spring-boot-rabbitmq</module>
+        <module>spring-boot-rabbitmq-consumer</module>
+        <module>spring-boot-rabbitmq-producer</module>
         <module>spring-boot-redis</module>
         <module>spring-boot-redis-jedis</module>
+        <module>spring-boot-redis-reactive</module>
         <module>spring-boot-redis-redisson</module>
+        <module>spring-boot-redisson</module>
         <module>spring-boot-resilience4j</module>
+        <module>spring-boot-rocketmq</module>
+        <module>spring-boot-rocketmq-consumer</module>
         <module>spring-boot-rocketmq-example</module>
+        <module>spring-boot-rocketmq-producer</module>
+        <module>spring-boot-screw</module>
         <module>spring-boot-security</module>
+        <module>spring-boot-security-custom</module>
+        <module>spring-boot-security-custom-cluster</module>
+        <module>spring-boot-security-token</module>
+        <module>spring-boot-security-token-cluster</module>
+        <module>spring-boot-sentinel</module>
         <module>spring-boot-shardingsphere</module>
+        <module>spring-boot-shardingsphere-jdbc</module>
+        <module>spring-boot-shiro</module>
         <module>spring-boot-skywalking</module>
+        <module>spring-boot-ssl</module>
+        <module>spring-boot-swagger2</module>
+        <module>spring-boot-template</module>
+        <module>spring-boot-testing</module>
+        <module>spring-boot-thrift</module>
+        <module>spring-boot-tomcat</module>
+        <module>spring-boot-undertow</module>
+        <module>spring-boot-webflux</module>
+        <module>spring-boot-xxl-job</module>
+        <module>vue-element-admin</module>
     </modules>
 
     <properties>
