--- a/spring-boot-shardingsphere/pom.xml
+++ b/spring-boot-shardingsphere/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.spring.boot.alice</groupId>
         <artifactId>spring-boot-alice</artifactId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.spring.boot.shardingsphere</groupId>
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.spring.boot.mybatis.plus</groupId>
             <artifactId>spring-boot-mybatis-plus</artifactId>
-            <version>0.0.1</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.apache.skywalking/apm-toolkit-logback-1.x -->
