--- a/spring-boot-arthas/pom.xml
+++ b/spring-boot-arthas/pom.xml
@@ -6,21 +6,20 @@
     <parent>
         <groupId>com.spring.boot.alice</groupId>
         <artifactId>spring-boot-alice</artifactId>
-        <version>0.0.1</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.spring.boot.arthas</groupId>
     <artifactId>spring-boot-arthas</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
     <name>spring-boot-arthas</name>
     <description>spring-boot-arthas</description>
 
     <dependencies>
-        <!-- https://mvnrepository.com/artifact/com.taobao.arthas/arthas-spring-boot-starter -->
         <dependency>
             <groupId>com.taobao.arthas</groupId>
             <artifactId>arthas-spring-boot-starter</artifactId>
-            <version>3.6.7</version>
+            <version>3.6.1</version>
+            <scope>runtime</scope>
         </dependency>
     </dependencies>
 
