--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,12 @@
             <artifactId>feilong</artifactId>
             <version>3.3.9</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
