--- a/spring-boot-example/pom.xml
+++ b/spring-boot-example/pom.xml
@@ -14,7 +14,16 @@
 	<name>spring-boot-example</name>
 	<description>spring-boot-example project</description>
 
+	<properties>
+		<knife4j-spring-boot-starter.version>3.0.3</knife4j-spring-boot-starter.version>
+	</properties>
+
 	<dependencies>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-aop</artifactId>
@@ -23,6 +32,12 @@
 		<dependency>
 			<groupId>com.yomahub</groupId>
 			<artifactId>tlog-all-spring-boot-starter</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.github.xiaoymin</groupId>
+			<artifactId>knife4j-spring-boot-starter</artifactId>
+			<version>${knife4j-spring-boot-starter.version}</version>
 		</dependency>
 	</dependencies>
 
