--- a/spring-boot-jar-war/pom.xml
+++ b/spring-boot-jar-war/pom.xml
@@ -4,10 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.4.1</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.spring.boot.alice</groupId>
+        <artifactId>spring-boot-alice</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <groupId>com.spring.boot.jar.war</groupId>
