--- a/spring-boot-kafka-streams/pom.xml
+++ b/spring-boot-kafka-streams/pom.xml
@@ -24,19 +24,19 @@
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
-            <version>2.4.4.RELEASE</version>
+<!--            <version>2.4.4.RELEASE</version>-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-streams</artifactId>
-            <version>2.4.1</version>
+<!--            <version>2.4.1</version>-->
         </dependency>
 
         <dependency>
             <groupId>org.apache.kafka</groupId>
             <artifactId>kafka-clients</artifactId>
-            <version>2.4.1</version>
+<!--            <version>2.4.1</version>-->
         </dependency>
     </dependencies>
 </project>
