--- a/spring-boot-guava/pom.xml
+++ b/spring-boot-guava/pom.xml
@@ -3,17 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-    <parent>
+	<parent>
 		<groupId>org.rock.boot</groupId>
 		<artifactId>rock-boot</artifactId>
 		<version>1.0-SNAPSHOT</version>
 	</parent>
 
-	<groupId>com.spring.boot.clickhouse</groupId>
-	<artifactId>spring-boot-clickhouse</artifactId>
+	<groupId>com.spring.boot.guava</groupId>
+	<artifactId>spring-boot-guava</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-clickhouse</name>
-	<description>spring boot clickhouse project</description>
 
 	<dependencies>
 		<dependency>
