--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,13 @@
                 <artifactId>easyexcel</artifactId>
                 <version>3.3.4</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.alibaba.cloud/spring-cloud-starter-alibaba-sentinel -->
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-starter-alibaba-sentinel</artifactId>
+                <version>2023.0.1.2</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
